Função e botão de gerar relatório adicionados

--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -22,6 +22,7 @@
             <button onclick="window.location.href='/admin/pessoas'">Cadastrar Pessoa</button>
             <button onclick="window.location.href='/admin/jogos'">Cadastrar Jogo</button>
             <button onclick="abrirModalLocacao()" class="btn-success">Relacionar Pessoa x Jogo</button>
+            <a href="/api/admin/relatorio"><button class="btn">Gerar PDF</button></a>
         </div>
 
         <div class="card">
