--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,7 +311,7 @@ th {
 .jogo-img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 8px;
 }
 
